# resources

./: .coverage  .editorconfig  .gitignore  Dockerfile  README.md  compose.yaml  mongo-init.js  pyproject.toml  report.html
.github/workflows/: github-actions.yml
src/facts/: app.py  settings.py  types.py
src/media/: app.py  settings.py  types.py
src/places/: app.py  settings.py  types.py
src/quizes/: app.py  types.py
src/quizzes/: app.py  types.py
tests/: test_facts.py  test_media.py  test_places.py  test_quizzes.py  test_resources.py
tests/fixtures/mongodb/: facts.yaml
