[tool.poetry]
name = "resources"
version = "0.1.0"
description = ""
authors = ["unrndm <unrndm@gmail.com>"]
packages = [
    { include = "facts", from = "src" },
    { include = "media", from = "src" },
    { include = "places", from = "src" },
    { include = "quizzes", from = "src" },
]


[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.15.0"
fastapi = "^0.70.0"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
reusable_mongodb_connection = { git = "https://github.com/Corona-Travel/reusable_mongodb_connection.git", branch = "main", extras = ["fastapi"] }
pymongo = "^3.12.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
